# tqec

./: .buildinfo  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_NOTES_topologiq_integration.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTION_OPPORTUNITIES.md  CONTRIBUTION_VALIDATION.md  CONTRIBUTOR_SPRINT_OCT10-15.md  CORRECT_PR_STRATEGY.md  DEEP_DIVE_COMPLETE.md  DEVELOPMENT.md  ERROR_MESSAGE_IMPROVEMENTS.md  ETHICAL_NOTICE.md  GIT_BRANCHING_STRATEGY.md  LEGAL_NOTICE.md  Makefile  NOTICE  POTENTIAL_IMPROVEMENTS.md  PROFESSIONAL_WORKFLOW.md  README.md  TESTING_RESULTS_MAC.md  TQEC_ECOSYSTEM_STRATEGY.md  _typos.toml  a.ipynb  api.html  architecture.html  citation.cff  cnot-tests.ipynb  contributor_guide.html  crumble.txt  ethical_notice.html  fix_docstrings.py  fix_docstrings2.py  fixed_bulk_xtop.txt  genindex.html  index.html  legal_notice.html  main.py  (+21 more)
.github/: dependabot.yml  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  finding_materials_from_recordings.md  question.md
.github/workflows/: ci.yml  draft-pdf.yml  exotic-oses.yml  gh-pages.yml  pr-close.yml  publish.yml  test-min-versions.yml
_autosummary/: tqec.Direction3D.html  tqec.Displacement.html  tqec.LinearFunction.html  tqec.NoiseModel.html  tqec.Position2D.html  tqec.Position3D.html  tqec.Scalable2D.html  tqec.Shape2D.html  tqec.SignedDirection3D.html  tqec.circuit.QubitMap.html  tqec.circuit.ScheduleException.html  tqec.circuit.ScheduledCircuit.html  tqec.circuit.generate_circuit.html  tqec.circuit.html  tqec.circuit.merge_scheduled_circuits.html  tqec.compile.BlockBuilder.html  tqec.compile.CompiledBlock.html  tqec.compile.CompiledGraph.html  tqec.compile.CubeSpec.html  tqec.compile.PipeSpec.html  tqec.compile.SubstitutionBuilder.html  tqec.compile.TopologicalComputationGraph.html  tqec.compile.blocks.BaseComposedLayer.html  tqec.compile.blocks.BaseLayer.html  tqec.compile.blocks.Block.html  tqec.compile.blocks.LayoutLayer.html  tqec.compile.blocks.LayoutPosition2D.html  tqec.compile.blocks.PlaquetteLayer.html  tqec.compile.blocks.RawCircuitLayer.html  tqec.compile.blocks.RepeatedLayer.html  tqec.compile.blocks.SequencedLayers.html  tqec.compile.blocks.SpatialBlockBorder.html  tqec.compile.blocks.TemporalBlockBorder.html  tqec.compile.blocks.html  tqec.compile.blocks.merge_parallel_block_layers.html  tqec.compile.compile_block_graph.html  tqec.compile.generate_circuit.html  tqec.compile.html  tqec.computation.BlockGraph.html  tqec.computation.CorrelationSurface.html  (+91 more)
_modules/: index.html
_modules/tqec/: noise_model.html  position.html  scale.html
_reproduction/outputs/: index.html
_sources/: api.rst.txt
_sources/_autosummary/: tqec.circuit.rst.txt  tqec.compile.PipeSpec.rst.txt  tqec.compile.TopologicalComputationGraph.rst.txt  tqec.compile.blocks.BaseComposedLayer.rst.txt  tqec.compile.blocks.BaseLayer.rst.txt  tqec.compile.blocks.Block.rst.txt  tqec.compile.blocks.PlaquetteLayer.rst.txt  tqec.compile.blocks.SequencedLayers.rst.txt  tqec.compile.blocks.SpatialBlockBorder.rst.txt  tqec.compile.blocks.merge_parallel_block_layers.rst.txt  tqec.compile.blocks.rst.txt  tqec.compile.rst.txt  tqec.computation.BlockGraph.rst.txt  tqec.computation.CorrelationSurface.rst.txt  tqec.computation.CubeKind.rst.txt  tqec.computation.Port.rst.txt  tqec.computation.YCube.rst.txt  tqec.computation.ZXCube.rst.txt  tqec.computation.ZXGraph.rst.txt  tqec.computation.rst.txt  tqec.gallery.cnot.rst.txt  tqec.gallery.cz.rst.txt  tqec.gallery.memory.rst.txt  tqec.gallery.move_rotation_block_graph.rst.txt  tqec.gallery.move_rotation_zx_graph.rst.txt  tqec.gallery.rst.txt  tqec.interop.PositionedZX.rst.txt  tqec.interop.SynthesisStrategy.rst.txt  tqec.interop.positioned_block_synthesis.rst.txt  tqec.interop.rst.txt  tqec.plaquette.Plaquette.rst.txt  tqec.plaquette.PlaquetteQubits.rst.txt  tqec.plaquette.Plaquettes.rst.txt  tqec.plaquette.RPNGDescription.rst.txt  tqec.plaquette.RepeatedPlaquettes.rst.txt  tqec.plaquette.SquarePlaquetteQubits.rst.txt  tqec.plaquette.rst.txt  tqec.templates.RPNGTemplate.rst.txt  tqec.templates.Template.rst.txt  tqec.templates.rst.txt  (+5 more)
_sources/gallery/: memory.ipynb.txt
_sources/user_guide/: index.rst.txt  quick_start.rst.txt
assets/: circuit_z_1_new.stim  circuit_z_1_standard.stim  circuit_z_2_new.stim  circuit_z_2_standard.stim  circuit_z_3_new.stim  circuit_z_3_standard.stim  cnot_2_standard.stim  cnot_3_standard.stim  cnot_rotate_x_270.dae  cnot_rotate_x_90.dae  cnot_rotate_y_180.dae  cnot_rotate_y_270.dae  cnot_rotate_y_90.dae  cnot_rotate_z_180.dae  cnot_rotate_z_270.dae  cnot_rotate_z_90.dae  cnots.bgraph  ghz16_qiskit.qpy  memory.dae  memory_2_standard.stim  memory_90.dae  native_circuits.py  rotated.dae  rotated_cnot_x_180.dae  rotations.dae  rotations.skp  rotations_Y.dae  rotations_cnot_180.dae  ruby_import.rb  steane_qiskit.qpy  steane_qrisp.py  steane_v3_10x.dae  steane_v3_10z.dae  steane_v3_10z_2_standard.stim  template.dae  template.skp  template_SU8.dae  template_SU8.skp  template_v8.dae  template_v8.skp  (+7 more)
benchmarks/: cnot_all_observables.py
docs/: Makefile  api.rst  architecture.rst  conf.py  contributor_guide.rst  ethical_notice.rst  index.rst  logical_cnot.dae  refs.bib
docs/gallery/: cnot.ipynb  index.rst  memory.ipynb  move_rotation.ipynb  qiskit.ipynb  qiskit_integration.ipynb  qrisp.ipynb  qrisp_integration.ipynb  s_gate.ipynb  stean_encoding.ipynb  steane_encoding.ipynb  three_cnots.ipynb  using_nisq_circuits.ipynb
examples/: logical_cnot.py  rotations_test.py
gallery/: cnot.html  cnot.ipynb  index.html  memory.html  memory.ipynb  move_rotation.html  move_rotation.ipynb  steane_encoding.html  steane_encoding.ipynb  three_cnots.html  three_cnots.ipynb
paper/: paper.bib  paper.md
tests/: conftest.py
user_guide/: bgraph.html  build_computation.html  build_computations.html  cli_examples.html  collada_interop.html  current_limitations.html  detailed_plots.html  extended_stabilizers_implementation.html  index.html  installation.html  quick_start.html  surface_codes.html  terminology.html
(+6409 files in other folders)
