[build-system]
requires = ["uv_build >= 0.7.19, < 0.10.0"]
build-backend = "uv_build"

[project]
name = "tqec"
version = "0.0.1"
authors = [
  { name = "TQEC community", email = "tqec-design-automation@googlegroups.com" },
]
description = "A design automation framework for Topological Quantum Error Correction."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["topological quantum error correction", "qec"]
# Upper bound: Some packages do not build on Python 3.14 yet
# e.g., docformatter, see https://github.com/PyCQA/docformatter/issues/327
requires-python = ">=3.10,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "matplotlib>=3.9",
  "networkx>=3.0",
  "numpy>=1.22,<2.3",                                  # Upper bound: https://github.com/tqec/tqec/pull/659
  "numpy>=1.24; python_version >= '3.11'",
  "numpy>=1.26; python_version >= '3.12'",
  "numpy>=2.1; python_version >= '3.13'",
  "platformdirs>=4.0",
  "pycollada>=0.8",
  "pycryptosat>=5.11.21",
  "python-sat[cryptosat]>=1.8.dev20",
  "pymatching>=2.3.1",                                 # Pymathcing with correlated matching support
  "pyzx>=0.9.0",
  "scipy>=1.15",
  "semver>=3.0.0",
  "sinter>=1.14",
  "sphinx-design>=0.6.1",
  "stim>=1.14",
  "stim>=1.15; python_version >= '3.13'",              # Stim only builds wheels for Python 3.13 starting from v1.15
  "svg-py>=1.8.0",
  "tqecd>=0.1.3",
  "typing-extensions>=4.2",
  "typing-extensions>=4.12; python_version >= '3.13'",
]


[project.urls]
Website = "https://tqec.app"
Documentation = "https://tqec.github.io/tqec/"
Repository = "https://github.com/tqec/tqec"
Issues = "https://github.com/tqec/tqec/issues"

[dependency-groups]
test = [
  "pytest>=8.4",
  "pytest-cov>=7.0",
  "types-networkx>=3.5",
  "scipy-stubs>=1.15",
]

docs = [
  "sphinx>=8.1.0",
  "myst-parser>=4.0",
  "pydata-sphinx-theme>=0.16",
  "nbsphinx>=0.9",
  "pandoc>=2.4",
  "sphinxcontrib-mermaid>=0.9",
  "docformatter>=1.7",
  "sphinx-autobuild>=2024.4",
  "sphinx-copybutton>=0.5",
  "sphinxcontrib-bibtex>=2.6",
  "jupyter-sphinx>=0.5",
]

bench = ["pyinstrument>=4.7"]

dev = [
  "jupyterlab>=4.4",
  "myst-parser>=4.0",
  "nbsphinx>=0.9",
  "pandoc>=2.4",
  "pre-commit>=4.3",
  "pydata-sphinx-theme>=0.16",
  "pytest>=8.4",
  "pytest-cov>=7.0",
  # Ruff version fixed to ensure replicability of results. Ruff being part of pre-commit, we
  # cannot afford someone installing a different version of ruff and being forbidden to commit
  # anything because the different version sees some errors in the code.
  # This is ensured by renovate configuration when it updates the ruff version.
  "ruff==0.14.4",
  "ty>=0.0.1a20",
  "scipy-stubs>=1.15",
  "sphinx>=8.1",
  "sphinxcontrib-mermaid>=0.9",
  "types-networkx>=3.5",
]

all = [
  { include-group = "test" },
  { include-group = "docs" },
  { include-group = "dev" },
  { include-group = "bench" },
]

[project.scripts]
tqec = "tqec._cli.tqec:main"


[tool.coverage.run]
omit = ["tests/*", "*/simulation/*", "*/visualisation/*"]

[tool.coverage.report]
exclude_also = [
  # Don't complain about missing debug-only code:
  "def __repr__",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",
]


[tool.ruff]
# exclude = ["__init__.py"]
line-length = 100
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["I", "E", "W", "D", "F", "PL", "NPY", "N", "PERF", "RUF", "UP"]

# ruff configuration
# I -- isort
# E, W -- pycodestyle
# D -- pydocstyle
# F -- pyflakes
# PL -- pylint
# NPY -- Numpy specific rules
# N -- pep8-naming
# PERF -- Perflint
# RUF -- ruff specific rules
# UP -- pyupgrade
# Rules considered over other incompatible ones
exclude = ["docs/conf.py", "setup.py"]

ignore = [
  # D100 & D104 - For the moment, we do not require documenting all public modules & packages.
  # D101 - By convention, class docstrings are on the __init__ method, so we do not document classes.
  # D105 - Magic methods have a clear meaning nearly everytime, so we do not require to document them.
  "D100",
  "D101",
  "D104",
  "D105",
  # D203 - Requires a blank line between class declaration and its docstring. Incompatible with D211. We prefer D211.
  # D203 - Requires multiline docstrings to start on the second line. Incompatible with D212. We prefer D212.
  "D203",
  "D213",
  # D407 - Ignored because ==== under a section heading is considered as a missing underline.
  "D407",
  # PLR091{2,3,5} - A few code blocks have too many {branches,arguments,statements}. Ignored for the moment.
  # PLR2004 - Replace magic values, not a priority at the moment.
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR2004",
  # N802 - functions involving {I,L,H,T}-shaped junction make more sense being names with upper-case letters.
  "N802",
]

# Specific per-file ignores
[tool.ruff.lint.per-file-ignores]
# We do not need tests functions to have a valid docstring
"**/*_test.py" = ["D103"]
# Some summary lines are long and hard to condense to a single line without loosing the precision and expressivity here.
# Disabling for the moment, will see in the future if these warnings can be re-enabled without hurting the documentation.
"src/tqec/compile/specs/library/generators/*" = ["D205"]
"src/tqec/compile/observables/*" = ["D205"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: mark a test that takes a long time to run."]
